--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.jpa.hibernate.ddl-auto=validate
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://teacher-projint-2223.eu.auth0.com/.well-known/jwks.json
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://teacher-projint-2223.eu.auth0.com/
+spring.security.oauth2.resourceserver.jwt.audiences=https://tododemo/api
